--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,9 @@
 	Thx - Hardy
 -->
 
+    <string name="average_glide_ratio">Average glide ratio</string>
+    <string name="glide_ratio_to_target">Glide ratio to target</string>
+    <string name="map_widget_group_glide_ratio">Glide ratio</string>
     <string name="ltr_or_rtl_triple_combine_via_bold_point">%1$s • %2$s • %3$s</string>
     <string name="routing_attr_hazmat_category_usa_1_name">Explosives</string>
     <string name="routing_attr_hazmat_category_usa_2_name">Gases</string>
