--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,10 @@
 	Thx - Hardy
 -->
 
+    <string name="write_bearing_description">Save bearing to each track point while recording</string>
+    <string name="write_bearing">Write Bearing</string>
+    <string name="write_heading_description">Save heading to each track point while recording</string>
+    <string name="write_heading">Write Heading</string>
     <string name="ltr_or_rtl_triple_combine_via_bold_point">%1$s • %2$s • %3$s</string>
     <string name="routing_attr_hazmat_category_usa_1_name">Explosives</string>
     <string name="routing_attr_hazmat_category_usa_2_name">Gases</string>
