--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -99,7 +99,7 @@
     <string name="power_watts_unit">Watts</string>
     <string name="revolutions_per_minute_unit">RPM</string>
     <string name="calculate_offline">Calculate offline</string>
-    <string name="calculate_offline_altitude_descr">Calculate elevation offline, based on heightmap data. Differences vs. device recorded altitude may be used as elevation correction.</string>
+    <string name="calculate_offline_altitude_descr">Calculate elevation offline, based on Terrain map (3D) data. Differences vs. device recorded altitude may be used as elevation correction.</string>
     <string name="error_calculate">Calculation result is empty</string>
     <string name="write_data_from_sensor_to_track">Write data from external sensors to GPX while trip recording.</string>
     <string name="save_track_external_sensors_data">Data</string>
