--- a/OsmAnd/res/values-eo/strings.xml
+++ b/OsmAnd/res/values-eo/strings.xml
@@ -3185,7 +3185,7 @@
     <string name="rendering_attr_piste_difficulty_connection_name">ligilo</string>
     <string name="shared_string_calculate">Kalkuli</string>
     <string name="shared_string_osmand_usage">Uzitaj de OsmAnd</string>
-    <string name="shared_sting_tiles">Kaheloj</string>
+    <string name="shared_string_tiles">Kaheloj</string>
     <string name="shared_string_maps">Mapoj</string>
     <string name="shared_string_memory_tb_desc">%1$s TB</string>
     <string name="shared_string_memory_gb_desc">%1$s GB</string>
