--- a/OsmAnd/res/values-nl/strings.xml
+++ b/OsmAnd/res/values-nl/strings.xml
@@ -3196,7 +3196,7 @@
     <string name="rendering_attr_piste_difficulty_aerialway_name">Lift</string>
     <string name="rendering_attr_piste_difficulty_connection_name">Verbinding</string>
     <string name="shared_string_osmand_usage">OsmAnd gebruik</string>
-    <string name="shared_sting_tiles">Tegels</string>
+    <string name="shared_string_tiles">Tegels</string>
     <string name="track_storage_directory">Opslagfolder tracks</string>
     <string name="track_storage_directory_descrp">Tracks kunnen opgeslagen worden in de \'rec\' folder, of in maandelijkse of dagelijkse folders.</string>
     <string name="store_tracks_in_rec_directory">Sla tracks op in de \'rec\' folder</string>
