#17323: Implemented sensor settings

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,8 @@
 	Thx - Hardy
 -->
     <string name="local_indexes_category_terrain">"Terrain maps (3D)</string>
+    <string name="wheel_circumference">Wheel circumference</string>
+    <string name="external_sensor_name_property_description">Sensor name</string>
     <string name="shared_string_included">Included</string>
     <string name="feature_available_as_part_of_plan">%1$s available as part of the %2$s plan</string>
     <string name="write_bearing_description">Save bearing to each track point while recording</string>
