--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -1541,6 +1541,8 @@ You need to activate the sensor so OsmAnd can find it.</string>
     <string name="please_provide_point_name_error">Please provide a name for the point</string>
     <string name="use_volume_buttons_as_zoom">Volume buttons as zoom</string>
     <string name="use_volume_buttons_as_zoom_descr">Control the map-zoom level using the volume buttons on the device.</string>
+    <string name="map_rotation_using_two_pointers_rotation_gesture">Allow map rotation using gesture</string>
+    <string name="map_rotation_using_two_pointers_rotation_gesture_descr">Control the map rotation using the two-finger rotation gesture. If disabled, only two-finger zooming will be allowed. Disable this to avoid accidentally rotating the map while zooming.</string>
     <string name="quick_action_remove_next_destination">Delete next destination point</string>
     <string name="app_mode_inline_skates">Inline skates</string>
     <string name="speed_cameras_removed_descr">This device doesn\'t have speed cameras.</string>
