--- a/OsmAnd/res/values-eu/strings.xml
+++ b/OsmAnd/res/values-eu/strings.xml
@@ -1859,7 +1859,7 @@
     <string name="techical_articles_item">Artikulu teknikoak</string>
     <string name="instalation_troubleshooting_item">Instalazioa eta arazoen konponketa</string>
     <string name="feedback">Iruzkinak</string>
-    <string name="contact_us">Kontaktua</string>
+    <string name="shared_string_contact">Kontaktua</string>
     <string name="search_on_the_map_item">Mapan bilatzen</string>
     <string name="map_viewing_item">Ikusi mapa</string>
     <string name="first_usage_item">Lehen erabilera</string>
