--- a/OsmAnd/res/values-nl/strings.xml
+++ b/OsmAnd/res/values-nl/strings.xml
@@ -1712,7 +1712,7 @@
     <string name="techical_articles_item">Technische artikelen</string>
     <string name="versions_item">Versies</string>
     <string name="feedback">Commentaar</string>
-    <string name="contact_us">Neem contact op</string>
+    <string name="shared_string_contact">Neem contact op</string>
     <string name="map_legend">Legenda</string>
     <string name="read_more">Meer lezen</string>
     <string name="whats_new">Wat is er nieuw in</string>
