--- a/OsmAnd/res/values-ro/strings.xml
+++ b/OsmAnd/res/values-ro/strings.xml
@@ -2148,7 +2148,7 @@
     <string name="techical_articles_item">Articole tehnice</string>
     <string name="versions_item">Versiuni</string>
     <string name="feedback">Părere</string>
-    <string name="contact_us">Contact</string>
+    <string name="shared_string_contact">Contact</string>
     <string name="map_legend">Legendă hartă</string>
     <string name="only_download_over_wifi">Descărcare doar pe Wi-Fi</string>
     <string name="live_update">Actualizări in timp real</string>
