--- a/OsmAnd/res/values-da/strings.xml
+++ b/OsmAnd/res/values-da/strings.xml
@@ -1727,7 +1727,7 @@
     <string name="techical_articles_item">Tekniske artikler</string>
     <string name="versions_item">Versioner</string>
     <string name="feedback">Meningsmåling</string>
-    <string name="contact_us">Kontakt</string>
+    <string name="shared_string_contact">Kontakt</string>
     <string name="osm_edit_created_poi">Oprettede OSM IP</string>
     <string name="map_legend">Signaturforklaring</string>
     <string name="shared_string_upload">Overfør</string>
