Revert "Help improvements"

--- a/OsmAnd/res/values-cs/strings.xml
+++ b/OsmAnd/res/values-cs/strings.xml
@@ -1720,7 +1720,7 @@
     <string name="techical_articles_item">Technické články</string>
     <string name="versions_item">Verze</string>
     <string name="feedback">Anketa</string>
-    <string name="shared_string_contact">Kontakt</string>
+    <string name="contact_us">Kontakt</string>
     <string name="osm_edit_created_poi">Vytvořen OSM POI</string>
     <string name="map_legend">Legenda mapy</string>
     <string name="shared_string_update">Aktualizovat</string>
