--- a/OsmAnd/res/values-hu/strings.xml
+++ b/OsmAnd/res/values-hu/strings.xml
@@ -1717,7 +1717,7 @@
     <string name="techical_articles_item">Technikai cikkek</string>
     <string name="versions_item">Verziók</string>
     <string name="feedback">Visszajelzés</string>
-    <string name="shared_string_contact">Kapcsolat</string>
+    <string name="contact_us">Kapcsolat</string>
     <string name="read_more">Bővebben</string>
     <string name="whats_new">Újdonságok</string>
     <string name="rendering_attr_showProposed_name">Tervezett objektumok</string>
