--- a/OsmAnd/res/values-iw/strings.xml
+++ b/OsmAnd/res/values-iw/strings.xml
@@ -1773,7 +1773,7 @@
     <string name="techical_articles_item">מאמרים טכניים</string>
     <string name="versions_item">גרסאות</string>
     <string name="feedback">משוב</string>
-    <string name="shared_string_contact">יצירת קשר</string>
+    <string name="contact_us">יצירת קשר</string>
     <string name="map_legend">מקרא מפה</string>
     <string name="show_arrows_on_the_map">הצגת חצים על המפה</string>
     <string name="remove_from_map_markers">הסרה מ‚סמני המפה’</string>
