--- a/OsmAnd/res/values-nb/strings.xml
+++ b/OsmAnd/res/values-nb/strings.xml
@@ -1288,7 +1288,7 @@
     <string name="map_viewing_item">Kartvisning</string>
     <string name="search_on_the_map_item">Søker på kartet</string>
     <string name="versions_item">Versjoner</string>
-    <string name="shared_string_contact">Kontakt</string>
+    <string name="contact_us">Kontakt</string>
     <string name="planning_trip_item">Turplanlegging</string>
     <string name="read_more">Les mer</string>
     <string name="rendering_attr_showProposed_name">Foreslåtte objekter</string>
