--- a/OsmAnd/res/values-pt-rBR/strings.xml
+++ b/OsmAnd/res/values-pt-rBR/strings.xml
@@ -1761,7 +1761,7 @@
     <string name="techical_articles_item">Artigos técnicos</string>
     <string name="versions_item">Versões</string>
     <string name="feedback">Comente</string>
-    <string name="shared_string_contact">Fale conosco</string>
+    <string name="contact_us">Fale conosco</string>
     <string name="map_legend">Legenda do mapa</string>
     <string name="save_poi_without_poi_type_message">Salvar o POI sem especificar o tipo\?</string>
     <string name="poi_context_menu_modify_osm_change">Modificar alteração no OSM</string>
