--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,8 @@
 	Thx - Hardy
 -->
 
+    <string name="shared_string_empty_trash">Empty trash</string>
+    <string name="trash_alert_card_desc">Items in trash will be erased after 30 days.</string>
     <string name="trash_is_empty_banner_desc">Files removed from OsmAnd Cloud will be available here for 30 days after.</string>
     <string name="trash_is_empty">Trash is empty</string>
     <string name="shared_string_trash">Trash</string>
